<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#909090">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>


        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:background="@drawable/rounded_corners"
            android:elevation="4dp"
            android:gravity="bottom|end"
            android:paddingHorizontal="16dp"
            android:paddingVertical="2dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="50dp"
            android:padding="16dp"
            android:text="@string/_0"
            android:textColor="@color/material_dynamic_primary10"
            android:textSize="100sp"
            android:maxLines="1"
            android:ellipsize="none"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/btn_clear"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_marginEnd="8dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/c"
                />

                <Button
                    android:id="@+id/btn_clear_entry"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="0dp"
                    android:layout_height="72dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:textSize="25sp"
                    android:text="@string/ce"
                    />

            <Button
                android:id="@+id/btn_mem_read"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/mr" />

            <Button
                android:id="@+id/btn_mem_save"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/ms" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_seven"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_marginEnd="8dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:textSize="32sp"
                android:text="@string/_7" />

            <Button
                android:id="@+id/btn_eight"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_marginEnd="8dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:textSize="32sp"
                android:text="@string/_8" />

            <Button
                android:id="@+id/btn_nine"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_marginEnd="8dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:textSize="32sp"
                android:text="@string/_9"/>

            <Button
                android:id="@+id/btn_div"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="32sp"
                android:text="@string/slash" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_four"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_marginEnd="8dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:textSize="32sp"
                android:text="@string/_4" />

            <Button
                android:id="@+id/btn_five"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_marginEnd="8dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:textSize="32sp"
                android:text="@string/_5"/>

            <Button
                android:id="@+id/btn_six"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_marginEnd="8dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:textSize="32sp"
                android:text="@string/_6"/>

            <Button
                android:id="@+id/btn_mult"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:textSize="32sp"
                android:text="@string/star"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_one"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_marginEnd="8dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:textSize="32sp"
                android:text="@string/_1"/>

            <Button
                android:id="@+id/btn_two"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_marginEnd="8dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:textSize="32sp"
                android:text="@string/_2"/>

            <Button
                android:id="@+id/btn_three"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_marginEnd="8dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:textSize="32sp"
                android:text="@string/_3"/>

            <Button
                android:id="@+id/btn_subtract"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:textSize="32sp"
                android:text="@string/minus"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_sign_change"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:textSize="28sp"
                android:text="@string/plusMinus"
                />

            <Button
                android:id="@+id/btn_zero"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_marginEnd="8dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:textSize="32sp"
                android:text="@string/_0"/>

            <Button
                android:id="@+id/btn_decimal"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_marginEnd="8dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:textSize="32sp"
                android:text="@string/dot"/>

            <Button
                android:id="@+id/btn_add"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:textSize="32sp"
                android:text="@string/plus"/>

        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_equals"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="24dp"
                    android:layout_height="72dp"
                    android:layout_weight="3"
                    android:textSize="28sp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/equals"/>

                <Button
                    android:id="@+id/btn_parentheses"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="0dp"
                    android:layout_height="72dp"
                    android:layout_weight="1"
                    android:textSize="28sp"
                    android:text="@string/parentheses"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/copy_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="#CC000000"
        android:orientation="horizontal"
        android:padding="16dp"
        android:visibility="gone"
        android:elevation="8dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_copy"
            android:contentDescription="@string/copy_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/kopiert"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</FrameLayout>